# ByteBiteApp

./: CMakeLists.txt  firebaseauth.cpp  firebaseauth.h  hkmenu.qml  main.cpp  ordertracking.qml  pratimamenu.qml  selectrestaurant.qml
android/: AndroidManifest.xml
android/res/xml/: network_security_config.xml
